--- a/finalProject.html
+++ b/finalProject.html
@@ -53,7 +53,7 @@
                     <i class="icon-pen-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana1.html" class="projectsFinal__week__details__week">Semana 1 -Reunion para delegar gastos e investigar cantidad de materiales a utilizar</a>
+                    <a href="proyecto-final/semana1.html" class="projectsFinal__week__details__week">Semana 1 -Desarrollo de la Pagina Web</a>
                     <p class="projectsFinal__week__details__description"></p>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana2.html" class="projectsFinal__week__details__week">Semana 2 - Realizacion de un bosquejo del trabajo, armas los planos para los muebles</a>
+                    <a href="proyecto-final/semana2.html" class="projectsFinal__week__details__week">Semana 2 -Desarrollo del Diseño</a>
                     <p class="projectsFinal__week__details__description">.</p>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana3.html" class="projectsFinal__week__details__week">Semana 3 - cortar todas las piezas a la medidas adecuada con todos los parametros correctos, ademas de un armado al 50%</a>
+                    <a href="proyecto-final/semana3.html" class="projectsFinal__week__details__week">Semana 3 - Ejecucion del Proyecto</a>
                     <p class="projectsFinal__week__details__description">.</p>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <i class="icon-settings-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana4.html" class="projectsFinal__week__details__week">Semana 4 - Implementación y armado del mueble , de acuerdo al modelo all 100%</a>
+                    <a href="proyecto-final/semana4.html" class="projectsFinal__week__details__week">Semana 4 - Presentacion Parte 1</a>
                     <p class="projectsFinal__week__details__description">.</p>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana5.html" class="projectsFinal__week__details__week">Semana 5 - Presentacion del producto al publico, al comprado y recibir comentarios y recomendaciones</a>
+                    <a href="proyecto-final/semana5.html" class="projectsFinal__week__details__week">Semana 5 - Presentacion Final</a>
                     <p class="projectsFinal__week__details__description"></p>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <i class="icon-receipt-shopping-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Semana 6 - Informe Final</a>
+                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Semana 6 - Feria de Proyecto</a>
                     <p class="projectsFinal__week__details__description"></p>
                 </div>
             </div>
