--- a/finalProject.html
+++ b/finalProject.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="projectsFinal__week__details">
                     <a href="proyecto-final/semana1.html" class="projectsFinal__week__details__week">Semana 1 -Desarrollo de la Pagina Web</a>
-                    <p class="projectsFinal__week__details__description"></p>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 28 de Febrero , hasta las 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="projectsFinal__week__details">
                     <a href="proyecto-final/semana2.html" class="projectsFinal__week__details__week">Semana 2 -Desarrollo del Diseño</a>
-                    <p class="projectsFinal__week__details__description">.</p>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 14 de Marzo , hasta las 10:15.</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -72,7 +72,7 @@
                 </div>
                 <div class="projectsFinal__week__details">
                     <a href="proyecto-final/semana3.html" class="projectsFinal__week__details__week">Semana 3 - Ejecucion del Proyecto</a>
-                    <p class="projectsFinal__week__details__description">.</p>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 28 de Marzo , hasta las 10:15.</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="projectsFinal__week__details">
                     <a href="proyecto-final/semana4.html" class="projectsFinal__week__details__week">Semana 4 - Presentacion Parte 1</a>
-                    <p class="projectsFinal__week__details__description">.</p>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 11 de Abril , hasta las 10:15.</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -90,7 +90,7 @@
                 </div>
                 <div class="projectsFinal__week__details">
                     <a href="proyecto-final/semana5.html" class="projectsFinal__week__details__week">Semana 5 - Presentacion Final</a>
-                    <p class="projectsFinal__week__details__description"></p>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 25 de Abril , hasta las 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -99,7 +99,7 @@
                 </div>
                 <div class="projectsFinal__week__details">
                     <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Semana 6 - Feria de Proyecto</a>
-                    <p class="projectsFinal__week__details__description"></p>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 9 de Mayo , hasta las 10:15</p>
                 </div>
             </div>
             
