--- a/finalProject.html
+++ b/finalProject.html
@@ -45,7 +45,9 @@
         <div class="projectsFinal__title">
             <div class="projectsFinal__title__text">
                 <h1>Proyecto de Fabricacion <span>Digital</span></h1>
-            </div>
+            </div>Nuestro proyecto de Laboratorio , esta dirigio a uno de los mayores problemas a los que se enfretan las millones de personas que viven en departamentos pequeños, en los edificios ; es del poco espacio que poseen en sus hogares , y la incomodidad de vivir en ellos
+                Una excelente oportunidad de negocio con millones de clientes potenciales es el de fabricar, y vender muebles plegables para este segmento del mercado
+            Estos muebles son perfectos para areas pequeñas, ya que evitan la sensacion de acumulacion, son muy esteticos , practicos y funcionales ademas de faciles de armas, ya que estan compuestas por piezas prefabricada
         </div>
         <div class="projectsFinal">
             <div class="projectsFinal__week">
