--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Maria de los Angeles Soto Torres</p>
-                    <p class="team__item__description__info">Me considero una persona sincera y honrada, capaz de trabajar en equipo y bajo presion, soy bastante alegre y me interesa bastante la innovacion.</p>
+                    <p class="team__item__description__info">Me considero una persona sincera y honrada, capaz de trabajar en equipo y bajo presion. Poseo conocimiento sobre diversos programas como Autocad , Rhinoceros tambien sobre circuitos electricos .Ademas tengo conocimiento en ingles basico. Tengo la facilidad de palabra y expresion ademas del poder de convencimiento hacia las demas personas .</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono : <strong>966724407</strong></p> 
                     <a href="mailto:maria.soto@tecsup.edu.pe" class="team__item__description__mail">maria.soto@tecsup.edu.pe</a>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Alicia Nadine Tejada Zegarra</p>
-                    <p class="team__item__description__info">Me considero una persona responsable, dinamica y creativa , con facilidad de adaptacion y capacidad de trabajar en equipo, me propogno a lograr metas trazadas en mi vida.</p>
+                    <p class="team__item__description__info">Me considero una persona responsable, dinamica y creativa, experta enmanualidad como son las tarjetas , artesania,trabajos con ceramicos en frio,cuadros ,tejidos,decoracion,etc. Actualmente llevo un ingles basico en el Cultural y tengo facilidad de expresion al publico .</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono: <strong>986295171</strong></p>  
                     <a href="mailto:alicia.tejada@tecsup.edu.pe" class="team__item__description__mail">alicia.tejada@tecsup.edu.pe</a>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Yomara Amarilis Ramos Surco</p>
-                    <p class="team__item__description__info">Me considero una persona emprendedora , decidia y con ganas de salir adelante. Tengo conocimientos en el area de logistica y publicidad.</p>
+                    <p class="team__item__description__info">Me considero una persona lider, honesta , perseverante que llega a lograr sus metas , con facilidad de palabra y poder de convencimiento .Tengo experiencia en el area de ventas en campo . He llevado cursos de seguridad y salud ocupacional e ingles nivel basico.Poseo cartera de clientes para llegar a impulsar un producto.</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono : <strong>955576917</strong></p> 
                     <a href="mailto:yomara.ramos@tecsup.edu.pe" class="team__item__description__mail">yomara.ramos@tecsup.edu.pe</a>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Esmeralda Pamela Saico Jihuallanca</p>
-                    <p class="team__item__description__info">Me considero una persona agradable , capaz de lograr todo lo que me propongo  .</p>
+                    <p class="team__item__description__info">me considero una persona bastante perseverante, jobial con las demas personas. Trabajo en equipo y tengo poseo una capacidad de liderasgo antes los demas. Tengo habilidad en carpinteria y produccion de productos de madera. Poseo el ingles basico en el Cultural .</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono: <strong>988711094</strong></p>  
                     <a href="mailto:esmeralda.saico@tecsup.edu.pe" class="team__item__description__mail">esmeralda.saico@tecsup.edu.pe</a>
@@ -147,7 +147,7 @@
             </div>
             <div class="footer__copy">
                 <img src="img/fablab.png" alt="">
-                <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
             </div>
         </div>
     </footer>
