--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -45,10 +45,10 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Empatizar y Definir</h1>
+                <h1>Gestion de Proyectos y Planteamiento de Problemas</h1>
             </div>
             <div class="think__title__content">
-                <p>En esta segunda parte de la metodología del Design Thinking abarcaremos el segundo objetivo: <br>  Desarrollar empatía con los usuarios, mediante la observación de los mismos. Por lo tanto, es una metodología basada en observar al usuario.</p>
+                <p>La gestión de proyectos es un enfoque metódico para planificar y orientar los procesos del proyecto de principio a fi: <br></p>
             </div>
         </div>
 
@@ -61,20 +61,14 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Empatizar y Definir</p>
-                    <p class="think__details__info__cont">Por ende se definió el problema "Falencias en la cafetería", se visualizó todas las fallas que presenta al vender un producto y al atender al público, para obtener datos concisos se procedió a desarrollar una encuesta de treinta preguntas para entender cómo se siente al respecto del servicio de las cafeterías.</p>
+                    <p class="think__details__info__title">Gestion de Proyectos y Planteamiento de Problemas</p>
+                    <p class="think__details__info__cont">Los elementos para plantear un problema son 3 y estan relacionada entre si y son las preguntas de la investigacion , los objetivos y la justificacion del estudio.Comenzaremos refiriendonos  al planteamiento del problema y la delimitacion , y luego veremos el tema de estos objetivos.</p>
                 </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
-                    <p>En el presente documento se muestra el análisis total del problema, basándonos en las respuestas de los encuestados.</p>
-                    <a href="https://drive.google.com/file/d/1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Respuestas Encuesta</p>
-                    <p>En el presente archisvo muestra a detalle los resultados de la encuesta a los estudiantes, sobre el servicio de atención en ambas cafeterías.</p>
-                    <a href="https://drive.google.com/file/d/1PHGLUB1CPTJZH-x0X2J5i2ZnAt8MoD09/view?usp=sharing" target="_blank">Documento - Respuestas Encuesta</a>
-                </div>
+                    <p>Aqui se muestra las respuestas a los criterios de evaluacion.</p>
+                    <a href="https://drive.google.com/file/d/1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>   
             </div>
         </div>
     </div>
