--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -48,7 +48,7 @@
                 <h1>Gestion de Proyectos y Planteamiento de Problemas</h1>
             </div>
             <div class="think__title__content">
-                <p>La gestión de proyectos es un enfoque metódico para planificar y orientar los procesos del proyecto de principio a fi: <br></p>
+                <p>La gestión de proyectos es un enfoque metódico para planificar y orientar los procesos del proyecto de principio a fin: <br></p>
             </div>
         </div>
 
