--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -67,7 +67,19 @@
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
-                    <p>Aqui se muestra las respuestas a los criterios de evaluacion.</p>
+                    <p>1.La propuesta del proyecto de Design Thinking está orientado a lo Humano, tiene viabilidad y es funcional. Y se encuentran involucrados:
+
+Escogimos esta idea ya que dos compañeras de nuestro grupo viven en departamentos los cuales son de dimensiones pequeñas, además que hoy en día la mayoría de las familias viven en estos departamentos con espacio reducido, El objetivo proyecto será proveer de los muebles necesario creando espacios accesibles sin tener que prescindir de algunas cosas por la limitación de espacios. 
+
+
+2.	La propuesta es de alto impacto social, económico:
+Ayudará mucho a la sociedad para que puedan sentirse cómodos en departamentos con espacio reducido, además de ser unos muebles al alcance económico de todos 
+
+3.	El equipo de trabajo tiene las competencias para desarrollar el proyecto:
+El equipo cuenta con la ayuda de un carpintero (padre de una integrante) experto en fabricación de muebles para el hogar.
+4.	La propuesta se basa en la realidad y en las oportunidades de innovación dentro de la región:
+Aun en nuestra región no se ofrecen estos muebles, así que es una oportunidad de innovación con ayuda a la sociedad
+.</p>
                     <a href="https://drive.google.com/file/d/1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>   
             </div>
         </div>
