--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -65,19 +65,11 @@
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Diagrama de Gant</p>
                     <p class="think__details__extra__description">El diagrama de Gantt es una herramienta gráfica cuyo objetivo es exponer el tiempo de dedicación previsto para diferentes tareas o actividades a lo largo de un tiempo total determinado; en este caso lo utilizaremos para poner en marcha el proyecto del sistema de seguridad.</p>
-                    <a href="https://drive.google.com/file/d/1oWtL5qB9TuM4tY1GiGK4lFBtQJbUiG-b/view?usp=sharing" target="_blank">Archivo - Diagrama de Gant</a>
+                     </div>
+            <div class="team__item">
+                <div class="team__item__img">
+                    <img src="img/lalal.jpg" alt="">
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Bosquejo Inicial</p>
-                    <p class="think__details__extra__description">El bosquejo supone el primer paso concreto de la obra, es decir, la primera materialización de la idea del autor. En este caso el primer diseño del prototipo del posible circuito y el funcionamiento de la cámara.</p>
-                    <a href="https://drive.google.com/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Documento - Bosquejo Inicial</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Descomposición Funcional</p>
-                    <p class="think__details__extra__description">La descomposición funcional se refiere ampliamente al proceso de resolución de una relación funcional en sus partes constituyentes, de tal manera que la función original se puede reconstruir (es decir, recompuestos) de las partes en función de la composición.
-                    <br>
-                    En el proyecto se aplicó para poder reconocer los componentes y saber acerca de cada uno de ellos, así como se da su funcionamiento.</p>
-                    <a href="https://drive.google.com/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Documento - Bosquejo Inicial</a>
                 </div>
             </div>
         </div>
