--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Práctica 1</a></li>
+                    <li><a href="design-thinking/practica1.html">Desarrollo de Pagina Web</a></li>
                     <li><a href="design-thinking/practica2.html">Práctica 2</a></li>
                     <li><a href="design-thinking/practica3.html">Práctica 3</a></li>
                     <li><a href="design-thinking/practica4.html">Práctica 4</a></li>
