--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             
                 <div class="main-header__copy__text">
                     <p>El objetivo del presente curso es contribuir con eficiencia al desarrollo de proyectos con fabricacion digital , inventando un propio futuro sobre las bases de sostenibilidad de una sociedad con espiritu emprendedor.</p>
-                </div>
+                <a href="https://www.google.com.pe/">descargar</a>
+		    </div>
             </div>
             
         </div>
