--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Desarrollo de Pagina Web</a></li>
-                    <li><a href="design-thinking/practica2.html">Práctica 2</a></li>
-                    <li><a href="design-thinking/practica3.html">Práctica 3</a></li>
-                    <li><a href="design-thinking/practica4.html">Práctica 4</a></li>
-                    <li><a href="design-thinking/practica5.html">Práctica 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Gestión de Proyectos</a></li>
+                    <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
+                    <li><a href="design-thinking/practica3.html">Empatizar</a></li>
+                    <li><a href="design-thinking/practica4.html">Definir</a></li>
+                    <li><a href="design-thinking/practica5.html">Idear</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototipar y Testear</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Proyecto de Fabricacion Digital</a>
                 <ul>
-                    <li><a href="proyecto-final/semana1.html">Semana 1</a></li>
-                    <li><a href="proyecto-final/semana2.html">Semana 2</a></li>
-                    <li><a href="proyecto-final/semana3.html">Semana 3</a></li>
-                    <li><a href="proyecto-final/semana4.html">Semana 4</a></li>
-                    <li><a href="proyecto-final/semana5.html">Semana 5</a></li>
-                    <li><a href="proyecto-final/semana6.html">Semana 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">Desarrollo de la Página Web</a></li>
+                    <li><a href="proyecto-final/semana2.html">Desarrollo del Diseño</a></li>
+                    <li><a href="proyecto-final/semana3.html">Ejecución del Proyecto</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentación Parte 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Presentación Final</a></li>
+                    <li><a href="proyecto-final/semana6.html">Feria de Proyectos</a></li>
                 </ul>
             </li>
 		</ul>
@@ -50,7 +51,7 @@
                 </div> -->
             
                 <div class="main-header__copy__text">
-                    <p>El objetivo del presente curso es contribuir con eficiencia al desarrollo de proyectos con fabricacion digital , inventando un propio futuro sobre las bases de sostenibilidad de una sociedad con espiritu emprendedor.</p>
+                    <p>El objetivo del presente curso es contribuir con eficiencia al desarrollo de proyectos con fabricación digital , inventando un propio futuro sobre las bases de sostenibilidad de una sociedad con espíritu emprendedor.</p>
                 <a href="https://www.google.com.pe/">descargar</a>
 		    </div>
             </div>
@@ -64,7 +65,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Actualmente somos estudiantes de Operacion de Planta de Procesamiento de Minerales de cuarto semestre, con conocimientos en produccion de circuitos electricos, el manejo de programa de Rhinoceros y de Autocad . Ademas de conocimientos en procesos minero metalurgicos</p>
+                <p>Actualmente somos estudiantes de Operación Planta de Procesamiento de Minerales de cuarto semestre, con conocimientos en producción de circuitos eléctricos, el manejo de programa de Rhinoceros y de Autocad . Además de conocimientos en procesos minero metalúrgicos</p>
             </div>
         </div>
     </div>
@@ -81,7 +82,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Maria de los Angeles Soto Torres</p>
-                    <p class="team__item__description__info">Me considero una persona sincera y honrada, capaz de trabajar en equipo y bajo presion. Poseo conocimiento sobre diversos programas como Autocad , Rhinoceros tambien sobre circuitos electricos .Ademas tengo conocimiento en ingles basico. Tengo la facilidad de palabra y expresion ademas del poder de convencimiento hacia las demas personas .</p>
+                    <p class="team__item__description__info">Me considero una persona sincera y honrada, capaz de trabajar en equipo y bajo presión. Poseo conocimiento sobre diversos programas como Autocad , Rhinoceros también sobre circuitos eléctricos .Además tengo conocimiento en inglés básico. Tengo la facilidad de palabra y expresión con el poder de convencimiento hacia las demás personas .</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono : <strong>966724407</strong></p> 
                     <a href="mailto:maria.soto@tecsup.edu.pe" class="team__item__description__mail">maria.soto@tecsup.edu.pe</a>
@@ -93,7 +94,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Alicia Nadine Tejada Zegarra</p>
-                    <p class="team__item__description__info">Me considero una persona responsable, dinamica y creativa, experta enmanualidad como son las tarjetas , artesania,trabajos con ceramicos en frio,cuadros ,tejidos,decoracion,etc. Actualmente llevo un ingles basico en el Cultural y tengo facilidad de expresion al publico .</p>
+                    <p class="team__item__description__info">Me considero una persona responsable, dinámica y creativa, experta en manualidades como son las tarjetas , artesania,trabajos con cerámicos en frío,cuadros ,tejidos,decoración,etc. Actualmente llevo un inglés básico en el Cultural y tengo facilidad de expresión al público .</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono: <strong>986295171</strong></p>  
                     <a href="mailto:alicia.tejada@tecsup.edu.pe" class="team__item__description__mail">alicia.tejada@tecsup.edu.pe</a>
@@ -105,7 +106,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Yomara Amarilis Ramos Surco</p>
-                    <p class="team__item__description__info">Me considero una persona lider, honesta , perseverante que llega a lograr sus metas , con facilidad de palabra y poder de convencimiento .Tengo experiencia en el area de ventas en campo . He llevado cursos de seguridad y salud ocupacional e ingles nivel basico.Poseo cartera de clientes para llegar a impulsar un producto.</p>
+                    <p class="team__item__description__info">Me considero una persona líder, honesta , perseverante que llega a lograr sus metas , con facilidad de palabra y poder de convencimiento .Tengo experiencia en el área de ventas en campo . He llevado cursos de seguridad y salud ocupacional e inglés nivel básico.Poseo cartera de clientes para llegar a impulsar un producto.</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono : <strong>955576917</strong></p> 
                     <a href="mailto:yomara.ramos@tecsup.edu.pe" class="team__item__description__mail">yomara.ramos@tecsup.edu.pe</a>
@@ -117,7 +118,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Esmeralda Pamela Saico Jihuallanca</p>
-                    <p class="team__item__description__info">me considero una persona bastante perseverante, jobial con las demas personas. Trabajo en equipo y tengo poseo una capacidad de liderasgo antes los demas. Tengo habilidad en carpinteria y produccion de productos de madera. Poseo el ingles basico en el Cultural .</p>
+                    <p class="team__item__description__info">Me considero una persona capáz de lograr todo lo que me propongo, soy honesta y respetuosa. Tengo habilidades en ventas de todo tipo en empresas grandes y pequeñas, poseo un certificado en oratoria y locución , mi pasatiempo favorito es el baile y vóley además de curso en inglés básico.</p>
                     <p class="team__item__description__cal">Calificación: <strong></strong></p>
                     <p class="team__item__description__cal">Telefono: <strong>988711094</strong></p>  
                     <a href="mailto:esmeralda.saico@tecsup.edu.pe" class="team__item__description__mail">esmeralda.saico@tecsup.edu.pe</a>
