--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Design Thinking - Práctica 2</title>
+    <title>Design Thinking - Gestion de proyecto y Planteamiento del Problema</title>
 </head>
 <body>
     <div id="top">
