--- a/design.html
+++ b/design.html
@@ -22,21 +22,22 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Práctica 1</a></li>
-                    <li><a href="design-thinking/practica2.html">Práctica 2</a></li>
-                    <li><a href="design-thinking/practica3.html">Práctica 3</a></li>
-                    <li><a href="design-thinking/practica4.html">Práctica 4</a></li>
-                    <li><a href="design-thinking/practica5.html">Práctica 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Diseño de página web y Planteamiento del Proyecto de Design Thinking</a></li>
+                    <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
+                    <li><a href="design-thinking/practica3.html">Empatizar</a></li>
+                    <li><a href="design-thinking/practica4.html">Definir.</a></li>
+                    <li><a href="design-thinking/practica5.html">Idear.</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototipar y Testear..</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Proyecto Final</a>
                 <ul>
-                    <li><a href="proyecto-final/semana1.html">Semana 1</a></li>
-                    <li><a href="proyecto-final/semana2.html">Semana 2</a></li>
-                    <li><a href="proyecto-final/semana3.html">Semana 3</a></li>
-                    <li><a href="proyecto-final/semana4.html">Semana 4</a></li>
-                    <li><a href="proyecto-final/semana5.html">Semana 5</a></li>
-                    <li><a href="proyecto-final/semana6.html">Semana 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">Desarrollo de la página Web</a></li>
+                    <li><a href="proyecto-final/semana2.html">Desarrollo del Diséño</a></li>
+                    <li><a href="proyecto-final/semana3.html">Ejecución del Proyecto</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentacion Parte 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Presentacion Final </a></li>
+                    <li><a href="proyecto-final/semana6.html">Feria de Proyecto</a></li>
                 </ul>
             </li>
 		</ul>
