--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -78,7 +78,7 @@ El equipo cuenta con la ayuda de un carpintero (padre de una integrante) experto
 Aun en nuestra región no se ofrecen estos muebles, así que es una oportunidad de innovación con ayuda a la sociedad
 .</p>
 			
-                    <a href="https://drive.google.com/file/d/1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>   
+                    <a href="https://drive.google.com/file/d/1DTYdH4GWW6e9u6Tp8myxssL32s7XD7zl/view?usp=sharing" class="think__details__extra__description">Documento - Diagrama de Gantt</a>   
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@ Aun en nuestra región no se ofrecen estos muebles, así que es una oportunidad 
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2017 - Diseñado por: <a href="maria.soto@tecsup.edu.pe">JMaria de los Angeles Soto Torres</a></p>
                 </div>
             </div>
         </footer>
