--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -54,7 +54,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wsK_agXv-KM" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://drive.google.com/file/d/19am0M7TbtlNtzkOFdADWWQQcm7qZ97Gj/view?usp=sharing" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
