--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -54,7 +54,7 @@
 
         <div class="think">
             <div class="think__img">
-                <div class="https://drive.google.com/file/d/19am0M7TbtlNtzkOFdADWWQQcm7qZ97Gj/view?usp=sharing">
+                <div class="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
